fix: improve occupancy checks and update localization for occupied status

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
     "sit": "Sit",
+    "occupied": "This is occupied",
     "laydown": "Lay Down",
     "laydown_medical": "Lay Down (Medical)",
     "sit_chair": "Sit on Chair",
